# kattbo-vvo

./: .gitignore  .gitlab-ci.yml  Changelog.md.md  Dockerfile  Dockerfile.web  README.md  Untitled-1.py  docker-compose.yml  filebeat.yml  kattbo_vvo_dev_flask.log.1  kattbo_vvo_dev_flask.log.2  kattbo_vvo_dev_flask.log.3  load_testing.py  make_celery.py  nginx.conf  requirements.txt  run.py  test.py  test_connection.py
.github/workflows/: dev-deploy_api.yml  dev-deploy_filebeat.yml  dev-deploy_frontend.yml  dev-setup.yml  dev-setup_env.yml  dev-web_and_celery_workflow.yml  prod-web_and_celery_workflow.yml  python-app.yml  web_and_celery_workflow.yml
api/: Dockerfile  entrypoint.sh  main.py  requirements.txt  requrements.txt
api/core/: celery.py  config.py  database.py  exceptions.py  (+4 more)
app/: __init__.py  config.py  create_mock_users.py  mixins.py  models.py  routes.py  test.py
auth-backend/: package-lock.json  package.json  server.js
common/: pyproject.toml  setup.py
common/models/: setup.py
common/models/events/: __init__.py
common/models/files/: __init__.py
common/models/hunting/: __init__.py
common/models/maps/: __init__.py
common/models/news/: __init__.py
common/models/tag/: __init__.py
common/models/users/: __init__.py
common/models/utils/: __init__.py  document.py  notification_task.py  notification_type.py  shortlink.py  tags_notification.py  tracking_mixin.py
docs/: readme.md
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite
uploads/: .gitignore
web/: Dockerfile  make_celery.py
(+490 files in other folders)
